welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:49: error: ';' expected but 'else' found.
  else if(getDirection()==Direction.OUEST){
  ^SnakeBuggle:58: error: ';' expected but 'else' found.
   }else{
    ^SnakeBuggle:66: error: Unmatched closing brace '}' ignored here
}
^